kustomize/metube/deployment.yaml
apiVersion: apps/v1
  kind: Deployment
  metadata:
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"metube","namespace":"metube"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"metube"}},"template":{"metadata":{"labels":{"app":"metube"}},"spec":{"containers":[{"env":[{"name":"YTDL_OPTIONS","valueFrom":{"configMapKeyRef":{"key":"ytdl_options","name":"metube-config"}}}],"image":"ghcr.io/alexta69/metube:latest","name":"metube","ports":[{"containerPort":8081}],"volumeMounts":[{"mountPath":"/downloads", [...]
      matchLabels:
        app: metube
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
      metadata:
        annotations:
        labels:
          app: metube
      spec:
        containers:
        - env:
          - name: YTDL_OPTIONS
            valueFrom:
              configMapKeyRef:
                key: ytdl_options
                name: metube-config
          image: ghcr.io/alexta69/metube:latest
          name: metube
          ports:
          - containerPort: 8081
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /downloads
            name: downloads
          - mountPath: /cookies/cookies.txt
            name: cookies
            subPath: cookies.txt
        initContainers:
        - command:
          - /bin/sh
          - -c
          - cp /cookies-src/cookies.txt /cookies/cookies.txt
          image: busybox
          name: init-cookies
          resources: {}
          volumeMounts:
          - mountPath: /cookies-src
            name: cookies-src
          - mountPath: /cookies
            name: cookies
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-pvc
        - configMap:
            name: metube-config
          name: cookies-src
        - emptyDir: {}
          name: cookies
      lastUpdateTime: "2024-10-30T20:17:33Z"
      message: ReplicaSet "metube-77484b465b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
      lastUpdateTime: "2024-12-15T01:11:28Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
