kustomize/metube/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true"},"name":"metube","namespace":"metube"},"spec":{"ingressClassName":"traefik","rules":[{"host":"metube.stillon.top","http":{"paths":[{"backend":{"service":{"name":"metube","port":{"number":8081}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts" [...]
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: "true"
    creationTimestamp: "2024-10-30T19:26:24Z"
    generation: 2
    name: metube
    namespace: metube
    resourceVersion: "17983768"
    uid: dd29f83b-885e-49be-bbbb-e1fe996fab63
  spec:
    ingressClassName: traefik
    rules:
    - host: metube.stillon.top
      http:
        paths:
        - backend:
            service:
              name: metube
              port:
                number: 8081
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - metube.stillon.top
      secretName: metube-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
