kustomize/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: metube
  type: ClusterIP
